# linphone_sdk_test

./: .autogen.sh.swp  Makefile.am  Makefile.in  build.sh  configure  configure.ac
alsa-lib-1.0.23/: Makefile.in  aclocal.m4  configure
alsa-lib-1.0.23/alsalisp/: Makefile.in
alsa-lib-1.0.23/aserver/: Makefile.in
alsa-lib-1.0.23/doc/: Makefile.in
alsa-lib-1.0.23/doc/pictures/: Makefile.in
alsa-lib-1.0.23/include/: Makefile.in
alsa-lib-1.0.23/include/sound/: Makefile.in
alsa-lib-1.0.23/modules/: Makefile.in
alsa-lib-1.0.23/modules/mixer/: Makefile.in
alsa-lib-1.0.23/modules/mixer/simple/: Makefile.in
alsa-lib-1.0.23/src/: Makefile.in
alsa-lib-1.0.23/src/alisp/: Makefile.in
alsa-lib-1.0.23/src/compat/: Makefile.in
alsa-lib-1.0.23/src/conf/: Makefile.in
alsa-lib-1.0.23/src/conf/cards/: Makefile.in
alsa-lib-1.0.23/src/conf/pcm/: Makefile.in
alsa-lib-1.0.23/src/control/: Makefile.in
alsa-lib-1.0.23/src/hwdep/: Makefile.in
alsa-lib-1.0.23/src/mixer/: Makefile.in
alsa-lib-1.0.23/src/pcm/: Makefile.in
alsa-lib-1.0.23/src/pcm/scopes/: Makefile.in
alsa-lib-1.0.23/src/rawmidi/: Makefile.in
alsa-lib-1.0.23/src/seq/: Makefile.in
alsa-lib-1.0.23/src/timer/: Makefile.in
alsa-lib-1.0.23/test/: Makefile.in
alsa-lib-1.0.23/test/lsb/: Makefile.in
alsa-lib-1.0.23/utils/: Makefile.in
belle-sip-1.4.1/: Makefile.in  config.h.in  configure  configure.ac
belle-sip-1.4.1/include/belle-sip/: belle-sip.h
belle-sip-1.4.1/src/: Makefile.am  Makefile.in  dns.c
ffmpeg/: configure
ffmpeg/libavutil/: libm.h
fremaks_utils/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
fremaks_utils/fms_common/: Makefile.am  Makefile.in
fremaks_utils/fms_common/include/: FmsSpinLock.h  Makefile.am  Makefile.in  ScopePtr.h  fms_dir.h  fms_file.h  fms_list.h  fms_log.h  fms_log_config.h  fms_mem.h  fms_queue.h  fms_spin_lock.h  list.h
fremaks_utils/fms_common/src/: FmsSpinLock.cpp  Makefile.am  Makefile.in  fms_dir.c  fms_file.c  fms_list.cpp  fms_log.cpp  fms_mem.cpp  fms_spin_lock.cpp
fremaks_utils/fms_common/src/mem_pool/: fms_common_test.c  fms_mem_list.c  fms_mem_list.h  fms_mem_tree.c  fms_mem_tree.h  list.h  rbtree.c  rbtree.h
fremaks_utils/fms_common/test/: Makefile.am  Makefile.in  fms_common_test.c
fremaks_utils/include/: Makefile.am  Makefile.in  fms_type.h
libantlr3c-3.4/: Makefile.in
libxml2-2.9.1/: Makefile.am  Makefile.in  configure  runtest.c  testrecurse.c
libxml2-2.9.1/doc/: Makefile.in
libxml2-2.9.1/doc/devhelp/: Makefile.in
libxml2-2.9.1/doc/examples/: Makefile.in
libxml2-2.9.1/example/: Makefile.in
libxml2-2.9.1/include/: Makefile.in
libxml2-2.9.1/include/libxml/: Makefile.in
libxml2-2.9.1/python/: Makefile.in
libxml2-2.9.1/python/tests/: Makefile.in
libxml2-2.9.1/xstc/: Makefile.in
linphone-3.8.5/: Makefile.in  aclocal.m4  config.h.in~  configure  configure.ac
linphone-3.8.5/console/: Makefile.in
linphone-3.8.5/coreapi/: Makefile.am  Makefile.in  callbacks.c  linphonecore.c
linphone-3.8.5/coreapi/help/: Makefile.in
linphone-3.8.5/gtk/: Makefile.in
linphone-3.8.5/include/: Makefile.in
linphone-3.8.5/m4/: Makefile.in
linphone-3.8.5/mediastreamer2/: Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac  mediastreamer-config.h.in
linphone-3.8.5/mediastreamer2/help/: Makefile.in
linphone-3.8.5/mediastreamer2/include/: Makefile.in
linphone-3.8.5/mediastreamer2/include/mediastreamer2/: Makefile.in  allfilters.h
linphone-3.8.5/mediastreamer2/m4/: Makefile.in
linphone-3.8.5/mediastreamer2/src/: Makefile.am  Makefile.in
linphone-3.8.5/mediastreamer2/src/android/: android-display.c  android-display_back.c  android-opengl-display.c  androidsound_depr.cpp  androidvideo.cpp  fms-display.cpp
linphone-3.8.5/mediastreamer2/src/audiofilters/: devices.c
linphone-3.8.5/mediastreamer2/src/base/: msfilter.c  mswebcam.c
linphone-3.8.5/mediastreamer2/src/utils/: ffmpeg-priv.c  ffmpeg-priv.h  opengles_display.c  opengles_display.h  shaders.h
linphone-3.8.5/mediastreamer2/src/videofilters/: h264dec_mediacodec.c  h264enc.c  h264enc_mediacodec.c  msv4l2.c  nowebcam.c
linphone-3.8.5/mediastreamer2/src/voip/: audiostream.c  msvideo.c  msvoip.c  scaler.c  videostream.c
linphone-3.8.5/mediastreamer2/tester/: Makefile.in
linphone-3.8.5/mediastreamer2/tools/: Makefile.in
linphone-3.8.5/oRTP/: Makefile.in  aclocal.m4  configure
linphone-3.8.5/oRTP/include/: Makefile.in
linphone-3.8.5/oRTP/include/ortp/: Makefile.in
linphone-3.8.5/oRTP/m4/: Makefile.in
linphone-3.8.5/oRTP/src/: Makefile.am  Makefile.in  rtpsession.c
linphone-3.8.5/oRTP/src/tests/: Makefile.in
linphone-3.8.5/oRTP/src/tests/win_receiver/: Makefile.in
linphone-3.8.5/oRTP/src/tests/win_sender/: Makefile.in
linphone-3.8.5/pixmaps/: Makefile.in
linphone-3.8.5/scripts/: Makefile.in
linphone-3.8.5/share/: Makefile.in
linphone-3.8.5/share/C/: Makefile.in
linphone-3.8.5/share/cs/: Makefile.in
linphone-3.8.5/share/fr/: Makefile.in
linphone-3.8.5/share/it/: Makefile.in
linphone-3.8.5/share/ja/: Makefile.in
linphone-3.8.5/share/xml/: Makefile.in
linphone-3.8.5/tester/: Makefile.in
linphone-3.8.5/tools/: Makefile.in
linphone_interface/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
linphone_interface/base/: Makefile.in
linphone_interface/base/include/: Makefile.am  Makefile.in  linphone_base.h  linphone_event.h
linphone_interface/base/src/: Makefile.am  Makefile.in  linphone_base.c  linphone_event.c
linphone_interface/base/test/: Makefile.am  Makefile.in  linphone_base_test.c
linphone_interface/jni/: Makefile.am  Makefile.in  linphone_jni.c
mswebrtc/: Makefile.am  Makefile.in  config.h.in~  configure  configure.ac
x264/: configure
x264/common/: osdep.h
